--- a/style.css
+++ b/style.css
@@ -73,6 +73,22 @@ textarea{
     text-align:center;
 }
 
+.list table{
+    border-collapse: collapse;
+    margin: 20px auto;
+    width: 80%;
+}
+
+.list th,
+.list td {
+    border:1px solid #a2aab0;
+    padding: 20px 10px;
+}
+
+.list th {
+    background-color: #ebeced;
+} 
+
 /* navのスタイル */
 nav{
     background: #333;
