--- a/style.css
+++ b/style.css
@@ -89,6 +89,11 @@ textarea{
     background-color: #ebeced;
 } 
 
+.list-box {
+    width: 80%;
+    margin:10px auto;
+}
+
 /* navのスタイル */
 nav{
     background: #333;
@@ -134,3 +139,30 @@ footer{
     text-align: center;
     padding: 32px 0;
 } 
+
+/* error_messageの追加 */
+.error_message{
+    color:red;
+    display:block;
+}
+
+/* inputのborderの色 */
+input.success {
+    border: 2px solid green;
+}
+
+input.error {
+    border: 2px solid red;
+}
+
+/* エラーメッセージの非表示 */
+#name-error-message {
+    display: block;
+    color:red;
+}
+
+#email-error-message {
+    display: block;
+    color:red;
+}
+
