--- a/style.css
+++ b/style.css
@@ -69,6 +69,20 @@ textarea{
     color: white;
 }
 
+.btn-info{
+    padding: 5px;
+    text-decoration: none;
+    color: skyblue;
+    margin:3px;
+    border:solid 2px skyblue;
+    border-radius: 2px;
+}
+
+.btn-info:hover {
+    background: skyblue;
+    color: white;
+}
+
 .login{
     text-align:center;
 }
